3node/yamls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public
  namespace: default
spec:
  - host: '*'
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
